added personal scoring feature

--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -13,6 +13,7 @@
           <a routerLink="/dashboard">{{user.name}}</a>
           <div class="menu">
             <a routerLink="/profile">Profile</a>
+            <a routerLink="/scores">Scores</a>
             <a (click)="logout()">Logout</a>
           </div>
         </li>
