--- a/frontend/src/app/components/pages/scores/scores.component.html
+++ b/frontend/src/app/components/pages/scores/scores.component.html
@@ -6,7 +6,6 @@
       <tr>
         <th>Case Study Number</th>
         <th>Case Study Subject</th>
-        <th>Score</th>
         <th>Test Taken At</th>
         <th>Details</th>
       </tr>
@@ -16,8 +15,7 @@
         <!-- Use the safe navigation operator to handle undefined caseStudy object -->
         <td>{{ userScore.caseStudy?.caseStudyNumber }}</td>
         <td>{{ userScore.caseStudy?.name }}</td>
-        <td>{{ userScore.score }} / </td>
-        <td>{{ userScore.testTakenAt | date: 'medium' }}</td>
+        <td>{{ userScore.testTakenAt | date : "medium" }}</td>
         <td>
           <button (click)="showDetails(userScore)">Show Details</button>
         </td>
@@ -28,25 +26,42 @@
 </div>
 
 <!-- Add a section to show detailed information about the user score -->
-<div class="container mt-5" *ngIf="selectedUserScore">
+<div class="container mt-5" *ngIf="selectedUserScore && showDetailsSection">
   <h2>User Score Details</h2>
   <p>Case Study Number: {{ selectedUserScore.caseStudy?.caseStudyNumber }}</p>
-  <p>Score: {{ selectedUserScore.score }}</p>
-  <p>Test Taken At: {{ selectedUserScore.testTakenAt | date: 'medium' }}</p>
-
+  <p>Case Subject: {{ selectedUserScore.caseStudy?.name }}</p>
+  <p>
+    Score: {{ selectedUserScore.score }} /
+    {{ getNumberOfQuestions(selectedUserScore) * scorePerQuestion }}
+  </p>
+  <p>
+    Percentage:
+    {{
+      (selectedUserScore.score /
+        (getNumberOfQuestions(selectedUserScore) * scorePerQuestion)) *
+        100
+    }}%
+  </p>
+  <p>Test Taken At: {{ selectedUserScore.testTakenAt | date : "medium" }}</p>
 
   <!-- Add a table to display granular information about each question -->
   <table class="table table-bordered">
     <thead>
       <tr>
+        <th>Number</th>
         <th>Question</th>
         <th>User Answer</th>
+        <th>Correct Answer</th>
+        <!-- New column for displaying the correct answer -->
         <th>Correct</th>
+        <th>Explanation</th>
       </tr>
     </thead>
     <tbody>
       <ng-container *ngIf="selectedUserScore.questions">
-        <tr *ngFor="let question of selectedUserScore.questions">
+        <tr *ngFor="let question of selectedUserScore.questions; let i = index">
+          <td>{{ i + 1 }}</td>
+          <!-- Display question number as index + 1 -->
           <td>{{ question.questionText }}</td>
           <td>
             <!-- Find the corresponding user answer for this question -->
@@ -55,10 +70,17 @@
             </ng-container>
           </td>
           <td>
+            <!-- Display the correct answer -->
+            {{ getCorrectAnswer(question) }}
+          </td>
+          <td>
             <!-- Find if the user answer is correct for this question -->
             <ng-container *ngIf="selectedUserScore.answers">
-              {{ getAnswerForQuestion(question._id)?.correct ? 'Yes' : 'No' }}
+              {{ getAnswerForQuestion(question._id)?.correct ? "Yes" : "No" }}
             </ng-container>
+          </td>
+          <td>
+            {{question.explanation}}
           </td>
         </tr>
       </ng-container>
