--- a/frontend/src/app/components/partials/navbar/navbar.component.html
+++ b/frontend/src/app/components/partials/navbar/navbar.component.html
@@ -4,7 +4,8 @@
     <ul class="nav navbar-nav">
       <li class="active"><a routerLink="/case-study-detail/{{caseStudy._id}}">Background Info</a></li>
       <li class="dropdown">
-        <a class="dropdown-toggle">Examinations</a>
+        <!--Only show dropdown after the user has clicked the first step-->
+        <a class="dropdown-toggle"  *ngIf="isButtonClicked">Examinations</a>
         <ul class="dropdown-menu">
           <!--Links to the tests-->
           <li><a routerLink="/case-study-detail/:useCaseId">Speak to {{caseStudy.name}}</a></li>
@@ -16,9 +17,9 @@
           <li><a routerLink="/welcome/{{caseStudy._id}}">Test Yourself</a></li> 
         </ul>
       </li>
-      <li><a href="#">Investigation</a></li>
-      <li><a href="#">Investigation images</a></li>
-      <li><a href="#">Diagnosis</a></li>
+      <li><a href="#"*ngIf="isButtonClicked">Investigation</a></li>
+      <li><a href="#"*ngIf="isButtonClicked">Investigation images</a></li>
+      <li><a href="#"*ngIf="isButtonClicked">Diagnosis</a></li>
     </ul>
   </div>
 </div>
