made changes to visual fields test- right and left now available

--- a/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.css
+++ b/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.css
@@ -39,3 +39,16 @@
 .name {
   font-size: 1.5em;
 }
+
+
+@media screen and (max-width: 600px) {
+  .parent-container {
+    flex-direction: column;
+  }
+  
+  .app-navbar {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
