--- a/frontend/src/app/components/partials/footer/footer.component.css
+++ b/frontend/src/app/components/partials/footer/footer.component.css
@@ -4,6 +4,7 @@ footer {
   padding: 30px 0;
   border-top: 1px solid #9c88ff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  margin-top: 40px;
 }
 
 footer a {
