--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -14,6 +14,7 @@
           <div class="menu">
             <a routerLink="/profile">Profile</a>
             <a routerLink="/scores">Scores</a>
+            <a routerLink="/admin" *ngIf="isAdmin">Admin</a>
             <a (click)="logout()">Logout</a>
           </div>
         </li>
