created admin page and graph for Graph to show the total correct and incorrect answers of all users for each case study

--- a/frontend/src/app/components/pages/admin-page/admin-page.component.html
+++ b/frontend/src/app/components/pages/admin-page/admin-page.component.html
@@ -15,7 +15,10 @@
 
     <!-- Main Content -->
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-      <!-- Main content goes here -->
+      <h1>Graph to show the total correct and incorrect answers of all users for each case study</h1>
+      <div class="chart-container">
+        <canvas id="MyChart">{{ chart }}</canvas>
+      </div>
     </main>
   </div>
 </div>
