--- a/frontend/src/app/components/pages/visual-fields-test-right/visual-fields-test-right.component.html
+++ b/frontend/src/app/components/pages/visual-fields-test-right/visual-fields-test-right.component.html
@@ -1,3 +1,4 @@
+<div class="full-container">
 <div class="parent-container">
   <!--navbar partial-->
   <app-navbar></app-navbar>
@@ -52,4 +53,5 @@
     [bgColor]="'#9c88ff'"
     (onClick)="handleClick()"
   ></default-button>
+</div>
 </div>
