--- a/frontend/src/app/components/pages/direct-ophthalmoscopy-test/direct-ophthalmoscopy-test.component.html
+++ b/frontend/src/app/components/pages/direct-ophthalmoscopy-test/direct-ophthalmoscopy-test.component.html
@@ -18,15 +18,15 @@
       <div id="background-image"></div>
       <!--Mask layer-->
       <div id="maskLayer">
-        <svg id="maskSvg" width="100%" height="100%">
+        <svg id="maskSvg" #maskSvg width="100%" height="100%">
           <defs>
             <mask id="mask">
               <rect width="100%" height="100%" fill="white"/>
-              <circle id="maskCircle" cx="0" cy="0" r="50" fill="black"/>
+              <circle id="maskCircle" #maskCircle cx="0" cy="0" r="50" fill="black"/>
             </mask>
           </defs>
           <rect width="100%" height="100%" fill="black" mask="url(#mask)"/>
-        </svg>
+        </svg>              
       </div>
     </div>
   </div>
