--- a/frontend/src/app/components/pages/admin-page/admin-page.component.html
+++ b/frontend/src/app/components/pages/admin-page/admin-page.component.html
@@ -1,24 +1,13 @@
-<div class="container-fluid">
-  <div class="row">
-    <!-- Sidebar -->
-    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-      <!-- Navigation Items -->
-      <div class="sidebar-sticky">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" href="/admin">User Scores per </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="/admin-avg-score-vs-time">Average Scores and User Count Over Time for Selected Case Study
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <!-- Main Content -->
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-      <h1>Graph to show the percent of correct and incorrect answers for all users per case study</h1>
+<!-- Container -->
+<div class="container-fluid d-flex flex-md-row flex-column">
+  <!-- Sidebar -->
+  <div class="sidebar-container d-flex flex-column">
+    <admin-navbar></admin-navbar>
+  </div>
+  <!-- Main Content -->
+  <div class="main-content-container flex-grow-1">
+    <main role="main" class="px-4">
+      <h1>Average Scores and User Count Over Time for Selected Case Study</h1>
       <div class="chart-container">
         <canvas id="MyChart">{{ chart }}</canvas>
       </div>
