--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -1,24 +1,47 @@
 <div class="hero">
-  <h1>Welcome to the QUB Virtual Eye Clinic</h1>
-  <p>
-    A 3D simulation for practicing clinical skills. Learn patient assessment steps and gain insights for real clinical settings. Enjoy improving your abilities with us!
+  <h1 class="text-center">Welcome to the QUB Virtual Eye Clinic</h1>
+  <p class="text-center">
+    A 3D simulation for practicing clinical skills. Learn patient assessment
+    steps and gain insights for real clinical settings. Enjoy improving your
+    abilities with us!
   </p>
-  <img src="https://www.britishirishchamber.com/wp-content/uploads/2018/08/Queens-University-Belfast-logo-1.jpg" alt="QUB Virtual Eye Clinic">
+  <div class="col-lg-6 col-md-8 col-sm-10 mx-auto"> <!-- Add Bootstrap's grid classes here -->
+    <img
+      class="img-fluid"
+      src="https://www.britishirishchamber.com/wp-content/uploads/2018/08/Queens-University-Belfast-logo-1.jpg"
+      alt="QUB Virtual Eye Clinic"
+    />
+  </div>
 </div>
 
-<div *ngIf="isLoggedIn; else notLoggedInMessage">
+
+<div class="container" *ngIf="isLoggedIn; else notLoggedInMessage">
   <!-- Card to populate the page with case studies -->
   <h2 class="text-center">Case Studies</h2>
-  <p class="text-center">Select which case study to investigate first</p>
+  <p class="text-center">You are on duty in the Eye Infirmary. You have 3 patients waiting on you. Select which patient to investigate first.</p>
   <ul class="card-list">
     <li *ngFor="let caseStudy of case_studies" class="card-item">
-      <a routerLink="/case-study-detail/{{caseStudy._id}}" class="card-link">
+      <a routerLink="/case-study-detail/{{ caseStudy._id }}" class="card-link">
         <div class="card">
-          <img class="card-img-top" [src]="caseStudy.imageUrl" [alt]="caseStudy.name">
+          <!-- Use Bootstrap's img-fluid class to make image responsive -->
+          <img
+            class="card-img-top img-fluid"
+            [src]="caseStudy.imageUrl"
+            [alt]="caseStudy.name"
+          />
           <div class="card-body">
-            <h5 class="card-title">{{caseStudy.name}}</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a routerLink="/case-study-detail/{{caseStudy._id}}" class="btn btn-primary">Investigate</a>
+            <h5 class="card-title text-center">
+              <strong>{{ caseStudy.name }}</strong>
+            </h5>
+            <!--Call methid to populate the case study description-->
+            <p class="card-text text-center">
+              {{ getDescription(caseStudy.caseStudyNumber) }}
+            </p>
+            <a
+              routerLink="/case-study-detail/{{ caseStudy._id }}"
+              class="btn btn-primary"
+              >Investigate</a
+            >
           </div>
         </div>
       </a>
@@ -28,7 +51,10 @@
 
 <ng-template #notLoggedInMessage>
   <div class="text-center">
-    <p>To access the features of the website and get started looking at case studies, you need to login.</p>
+    <p>
+      To access the features of the website and get started looking at case
+      studies, you need to login.
+    </p>
     <a routerLink="/login">
       <default-button text="Login" bgColor="#9c88ff"></default-button>
     </a>
