--- a/frontend/src/app/components/pages/scores/scores.component.html
+++ b/frontend/src/app/components/pages/scores/scores.component.html
@@ -45,7 +45,7 @@
   <p>Test Taken At: {{ selectedUserScore.testTakenAt | date : "medium" }}</p>
 
     <!-- Add the chart container -->
-    <div style="height: 400px;">
+    <div class="container mb-5" style="height: 400px;">
       <canvas id='scoreChart'></canvas>
     </div>
 
