--- a/frontend/src/app/components/pages/visual-acuity-test/visual-acuity-test.component.css
+++ b/frontend/src/app/components/pages/visual-acuity-test/visual-acuity-test.component.css
@@ -1,15 +1,15 @@
    /* Canvas container */
    #canvasContainer {
     position: relative; /*postion canvas relative to its normal position in doc*/
-    height: 800px;
-    width: 600px;
+    height: 100%;
+    width: auto;
     border: 1px solid black;
     overflow: auto; /* Set to auto to allow for scrolling. This ensures the zoom does not go outside of the canvas */
   }
 
   /*Snellen Chart CSS*/
   #snellenChart {
-    position: absolute; /* Position the snellen chart precisely in relation to the canvas  */
+    position: relative; /* Position the snellen chart precisely in relation to the canvas  */
     width: 100%;
     height: auto; /*Height set to auto to maintain the ratio of the image when zooming*/
   }
@@ -36,4 +36,66 @@
     padding-left: 0px;
   }
   
-  
+  /*button css*/
+
+.btn-primary {
+  margin-top: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #9c88ff;
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: #495057;
+  cursor: pointer;
+}
+
+ /*button css*/
+
+ .btn-secondary {
+  margin-top: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: greenyellow;
+  color: black;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: #495057;
+  cursor: pointer;
+}
+
+ /*button css*/
+
+ .btn-tert {
+  margin-top: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: lightgray;
+  color: black;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.btn-tert:hover {
+  background-color: #495057;
+  cursor: pointer;
+}
+
