--- a/frontend/src/app/components/partials/admin-navbar/admin-navbar.component.css
+++ b/frontend/src/app/components/partials/admin-navbar/admin-navbar.component.css
@@ -3,3 +3,20 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.sidebar {
+  padding: 2rem 1rem; 
+}
+
+.sidebar .navbar {
+  width: 100%; 
+}
+
+.sidebar .navbar-nav {
+  flex-direction: column; 
+}
+
+.sidebar .nav-item .nav-link {
+  white-space: normal; 
+  text-align: left; 
+}
