Added messages to the visual fields by confrontation for left and right eye

--- a/frontend/src/app/components/partials/admin-navbar/admin-navbar.component.html
+++ b/frontend/src/app/components/partials/admin-navbar/admin-navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Sidebar -->
-<div class="col-md-2 d-none d-md-block bg-light sidebar mr-5">
+<div class="col-md-2 d-none d-md-block bg-light sidebar">
     <nav class="navbar navbar-expand-md navbar-light flex-md-column flex-row align-items-start py-2"[class.d-none]="isMobile">
     <div class="collapse navbar-collapse">
       <ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
