added changes to welcome

--- a/frontend/src/app/components/pages/welcome/welcome.component.html
+++ b/frontend/src/app/components/pages/welcome/welcome.component.html
@@ -1,13 +1,13 @@
 <div class="container bg-light py-5">
   <h1 class="display-5 fw-bold">Welcome to Quiz App</h1>
   <p class="col-med-8 fs-4">
-    This quiz will contain 9 questions in total. Each Question holds 10 points.
+    This quiz will contain {{totalQuestions}} questions in total. Each Question holds 10 points.
   </p>
   <h4>Rules:</h4>
   <ol>
     <li>Correct Question gives you 10 points</li>
-    <li>Incorrect Question gives you -10 points</li>
-    <li>You will have 10 seconds to answer a question</li>
+    <li>Incorrect Question gives you 0 points</li>
+    <li>You will have 60 seconds to answer a question</li>
     <li>Refreshing the page will reset the Quiz</li>
   </ol>
 
