--- a/frontend/src/app/components/pages/admin-page/admin-page.component.html
+++ b/frontend/src/app/components/pages/admin-page/admin-page.component.html
@@ -8,8 +8,98 @@
   <div class="main-content-container flex-grow-1">
     <main role="main" class="px-4">
       <h1>Average Scores and User Count Over Time for Selected Case Study</h1>
+
       <div class="chart-container">
         <canvas id="MyChart">{{ chart }}</canvas>
+      </div>
+
+      <div class="btn-group mt-3" role="group">
+        <button
+          type="button"
+          class="btn btn-outline-secondary"
+          (click)="dateRangeChanged(1)"
+        >
+          Last 1 Day
+        </button>
+        <button
+          type="button"
+          class="btn btn-outline-secondary"
+          (click)="dateRangeChanged(3)"
+        >
+          Last 3 Days
+        </button>
+        <button
+          type="button"
+          class="btn btn-outline-secondary"
+          (click)="dateRangeChanged(7)"
+        >
+          Last 7 Days
+        </button>
+        <button
+          type="button"
+          class="btn btn-outline-secondary"
+          (click)="dateRangeChanged(30)"
+        >
+          Last 1 Month
+        </button>
+        <button
+          type="button"
+          class="btn btn-outline-secondary"
+          (click)="dateRangeChanged(180)"
+        >
+          Last 6 Months
+        </button>
+        <button
+          type="button"
+          class="btn btn-outline-secondary"
+          (click)="dateRangeChanged(365)"
+        >
+          Last 1 Year
+        </button>
+      </div>
+
+      <div class="mt-3">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">Case Study</th>
+              <th scope="col">Correct (%)</th>
+              <th scope="col">Incorrect (%)</th>
+              <th scope="col">Number of Tests</th>
+              <!-- Add this line -->
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th colspan="4">Selected Date Range: {{ dateRange }} day(s)</th>
+            </tr>
+            <tr *ngFor="let label of labels; index as i">
+              <th scope="row">{{ label }}</th>
+              <td>
+                {{
+                  (correctCounts[i] / (correctCounts[i] + incorrectCounts[i])) *
+                    100 | number : "1.2-2"
+                }}
+              </td>
+              <td>
+                {{
+                  (incorrectCounts[i] /
+                    (correctCounts[i] + incorrectCounts[i])) *
+                    100 | number : "1.2-2"
+                }}
+              </td>
+              <td>{{ testsCount[i] }}</td>
+              <!-- Add this line -->
+            </tr>
+            <!-- Add the Average row -->
+            <tr>
+              <th scope="row">Average</th>
+              <td>{{ calculateAverages().avgCorrect }}</td>
+              <td>{{ calculateAverages().avgIncorrect }}</td>
+              <td>{{ totalTests() }}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </main>
   </div>
