--- a/frontend/src/app/components/pages/admin-avg-score-vs-time/admin-avg-score-vs-time.component.html
+++ b/frontend/src/app/components/pages/admin-avg-score-vs-time/admin-avg-score-vs-time.component.html
@@ -9,7 +9,11 @@
       <!-- Dropdown Selector -->
       <div>
         <p>Please select the case study you want to view from the dropdown:</p>
-        <select [(ngModel)]="selectedCaseStudy" (change)="onCaseStudyChange(selectedCaseStudy)" class="custom-select">
+        <select
+          [(ngModel)]="selectedCaseStudy"
+          (change)="onCaseStudyChange(selectedCaseStudy)"
+          class="custom-select"
+        >
           <option *ngFor="let caseStudy of caseStudies" [ngValue]="caseStudy">
             {{ caseStudy.name }}
           </option>
@@ -22,6 +26,97 @@
         <div class="chart-container">
           <canvas id="MyChart">{{ chart }}</canvas>
         </div>
+
+        <div class="btn-group mt-3" role="group">
+          <button
+            type="button"
+            class="btn btn-outline-secondary"
+            (click)="dateRangeChanged(1)"
+          >
+            Last 1 Day
+          </button>
+          <button
+            type="button"
+            class="btn btn-outline-secondary"
+            (click)="dateRangeChanged(3)"
+          >
+            Last 3 Days
+          </button>
+          <button
+            type="button"
+            class="btn btn-outline-secondary"
+            (click)="dateRangeChanged(7)"
+          >
+            Last 7 Days
+          </button>
+          <button
+            type="button"
+            class="btn btn-outline-secondary"
+            (click)="dateRangeChanged(30)"
+          >
+            Last 1 Month
+          </button>
+          <button
+            type="button"
+            class="btn btn-outline-secondary"
+            (click)="dateRangeChanged(180)"
+          >
+            Last 6 Months
+          </button>
+          <button
+            type="button"
+            class="btn btn-outline-secondary"
+            (click)="dateRangeChanged(365)"
+          >
+            Last 1 Year
+          </button>
+        </div>
+
+        <!--Table of results below-->
+        <table class="table table-striped mt-3">
+          <thead>
+            <tr>
+              <th scope="col">Date</th>
+              <th scope="col">Average Score (%)</th>
+              <th scope="col">Correct (%)</th>
+              <th scope="col">Incorrect (%)</th>
+              <th scope="col">Number of Tests</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th colspan="5">Selected Date Range: {{ dateRange }} day(s)</th>
+            </tr>
+            <tr *ngFor="let label of labels; index as i">
+              <th scope="row">{{ label }}</th>
+              <td>{{ averageScores[i] | number : "1.2-2" }}</td>
+              <td>
+                {{
+                  correctCounts && correctCounts[i]
+                    ? (correctCounts[i] / testsCount[i]) * 100
+                    : (0 | number : "1.2-2")
+                }}
+              </td>
+              <td>
+                {{
+                  incorrectCounts && incorrectCounts[i]
+                    ? (incorrectCounts[i] / testsCount[i]) * 100
+                    : (0 | number : "1.2-2")
+                }}
+              </td>
+        
+              <td>{{ testsCount[i] }}</td>
+            </tr>
+            <tr>
+              <th scope="row">Average</th>
+              <td>{{ getAverageScore() | number : "1.2-2" }}</td>
+              <td>{{ calculateAverages().avgCorrect }}</td>
+              <td>{{ calculateAverages().avgIncorrect }}</td>
+              <td>{{ totalTests() }}</td>
+            </tr>
+          </tbody>
+        </table>
+        
       </main>
     </div>
   </div>
