avatar and profile page edits

--- a/frontend/src/app/components/partials/admin-navbar/admin-navbar.component.html
+++ b/frontend/src/app/components/partials/admin-navbar/admin-navbar.component.html
@@ -13,6 +13,11 @@
             <i class="fa fa-bar-chart fa-fw"></i> Average Scores and User Count Over Time for Selected Case Study
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link pl-0 text-nowrap" href="/admin-registrations-over-time">
+            <i class="fa fa-bar-chart fa-fw"></i>Registrations Over Time
+          </a>
+        </li>
       </ul>
     </div>
   </nav>
