--- a/frontend/src/app/components/pages/admin-registrations-over-time/admin-registrations-over-time.component.html
+++ b/frontend/src/app/components/pages/admin-registrations-over-time/admin-registrations-over-time.component.html
@@ -1,10 +1,17 @@
 <div class="container-fluid">
   <div class="row">
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-      <h1>User Registrations Over Time</h1>
-      <div class="chart-container">
-        <canvas id="registrationChart">{{ chart }}</canvas>
-      </div>
-    </main>
+    <!-- Sidebar -->
+    <div class="sidebar-container d-flex flex-column">
+      <admin-navbar></admin-navbar>
+    </div>
+
+    <div class="col-md-9 ml-sm-auto col-lg-10 px-4">
+      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+        <h1>User Registrations Over Time</h1>
+        <div class="chart-container">
+          <canvas id="registrationChart">{{ chart }}</canvas>
+        </div>
+      </main>
+    </div>
   </div>
 </div>
